--- a/SearchSite/templates/StartPage.html
+++ b/SearchSite/templates/StartPage.html
@@ -124,8 +124,8 @@
          </div>
        <div class="jsb" style="padding-top:18px">
          <center>
-           <input value = "GZ 搜索" aria-label = "GZ 搜索" name = "submitType" type = "submit">
-           <input value = "手气不错" aria-label = "手气不错" name = "submitType" type = "submit">
+           <input value = "GZ 搜索" aria-label = "GZ 搜索" name = "seriousSearch" type = "submit">
+           <input value = "手气不错" aria-label = "手气不错" name = "funnySearch" type = "submit">
          </center>
        </div>
      </div>
