--- a/SearchSite/templates/News.html
+++ b/SearchSite/templates/News.html
@@ -5,7 +5,7 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	  <meta content="always" name="referrer">
     <meta name="theme-color" content="#2932e1">
-    <title>****_GZ搜索</title>
+    <title>{{searchInput}}_GZ搜索</title>
     <style data-for="result" type="text/css" id="css_newi_result">
  body{color:#333;background:#fff;padding:6px 0 0;margin:0;position:relative;min-width:900px}
  body,th,td,.p1,.p2{font-family:arial}
@@ -1187,10 +1187,10 @@
 									<span class="soutu-btn"></span>
 									<div id="kw_tip" style="width: initial; margin-left: 67px; max-width: 468px; display: none;" unselectable="on" onselectstart="return false;" class="s_ipt_tip">
 									</div>
-									<input id="kw" name="searchText" class="s_ipt" value="" maxlength="255" autocomplete="off">
+									<input id="kw" name="searchText" class="s_ipt" value="{{searchInput}}" maxlength="255" autocomplete="off">
 								</span>
 								<span class="bg s_btn_wr">
-									<input type="submit" id="su" value="GZ一下" class="bg s_btn">
+									<input type="submit" id="su" value="GZ一下" class="bg s_btn" name = "seriousSearch">
 								</span>
 							</form>
 						</div>
